@@ -1,3 +1,11 @@
+2023-08-11  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	[eqn]: Trivially refactor.
+
+	* src/preproc/eqn/main.cpp (input_char_description): Migrate to
+	`const`-qualified object to size an array of length computed at
+	compile time and avoid repeating lengthy expression.
+
 2023-08-10  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	[man]: Add new `TS` register to configure required separation
